--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -35,7 +35,7 @@ The *_Architecture Diagram_* given above explains the high-level design of the A
 The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
 Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
 
-`Main` has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[`Main`] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[`MainApp`]. It is responsible for,
+#Main# has two classes called link:{repoURL}/src/main/java/seedu/address/Main.java[#Main#] and link:{repoURL}/src/main/java/seedu/address/MainApp.java[#MainApp#]. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -43,21 +43,21 @@ Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and
 <<Design-Commons,*`Commons`*>> represents a collection of classes used by multiple other components.
 The following class plays an important role at the architecture level:
 
-* `LogsCenter` : Used by many classes to write log messages to the App's log file.
+* #LogsCenter# : Used by many classes to write log messages to the App's log file.
 
 The rest of the App consists of four components.
 
-* <<Design-Ui,*`UI`*>>: The UI of the App.
-* <<Design-Logic,*`Logic`*>>: The command executor.
-* <<Design-Model,*`Model`*>>: Holds the data of the App in-memory.
-* <<Design-Storage,*`Storage`*>>: Reads data from, and writes data to, the hard disk.
+* <<Design-Ui,*#UI#*>>: The UI of the App.
+* <<Design-Logic,*#Logic#*>>: The command executor.
+* <<Design-Model,*#Model#*>>: Holds the data of the App in-memory.
+* <<Design-Storage,*#Storage#*>>: Reads data from, and writes data to, the hard disk.
 
 Each of the four components
 
-* Defines its _API_ in an `interface` with the same name as the Component.
-* Exposes its functionality using a `{Component Name}Manager` class.
+* Defines its _API_ in an #interface# with the same name as the Component.
+* Exposes its functionality using a #{Component Name}Manager# class.
 
-For example, the `Logic` component (see the class diagram given below) defines it's API in the `Logic.java` interface and exposes its functionality using the `LogicManager.java` class.
+For example, the #Logic# component (see the class diagram given below) defines it's API in the #Logic.java# interface and exposes its functionality using the #LogicManager.java# class.
 
 .Class Diagram of the Logic Component
 image::LogicClassDiagram.png[]
@@ -80,14 +80,14 @@ image::UiClassDiagram.png[]
 
 *API* : link:{repoURL}/src/main/java/seedu/address/ui/Ui.java[`Ui.java`]
 
-The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `DishListPanel`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
+The UI consists of a #MainWindow# that is made up of parts e.g.#CommandBox#, #ResultDisplay#, #DishListPanel#, #StatusBarFooter# etc. All these, including the #MainWindow#, inherit from the abstract #UiPart# class.
 
-The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
+The #UI# component uses JavaFx UI framework. The layout of these UI parts are defined in matching *.fxml* files that are in the *src/main/resources/view* folder. For example, the layout of the link:{repoURL}/src/main/java/seedu/address/ui/MainWindow.java[#MainWindow#] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[#MainWindow.fxml#]
 
-The `UI` component,
+The #UI# component,
 
-* Executes user commands using the `Logic` component.
-* Listens for changes to `Model` data so that the UI can be updated with the modified data.
+* Executes user commands using the #Logic# component.
+* Listens for changes to #Model# data so that the UI can be updated with the modified data.
 
 [[Design-Logic]]
 === Logic component
@@ -97,20 +97,20 @@ The `UI` component,
 image::LogicClassDiagram.png[]
 
 *API* :
-link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
+link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[#Logic.java#]
 
-.  `Logic` uses the `CommandParser` class to parse the user command.
-.  This results in a `Command` object which is executed by the `LogicManager`.
-.  The command execution can affect the `Model` (e.g. adding a meal).
-.  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
-.  In addition, the `CommandResult` object can also instruct the `Ui` to perform certain actions, such as displaying help to the user.
+.  #Logic# uses the #CommandParser# class to parse the user command.
+.  This results in a #Command# object which is executed by the #LogicManager#.
+.  The command execution can affect the #Model# (e.g. adding a meal).
+.  The result of the command execution is encapsulated as a #CommandResult# object which is passed back to the #Ui#.
+.  In addition, the #CommandResult# object can also instruct the #Ui# to perform certain actions, such as displaying help to the user.
 
-Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("delete 1")` API call.
+Given below is the Sequence Diagram for interactions within the #Logic# component for the #_Logic#execute("delete 1")_# API call.
 
 .Interactions Inside the Logic Component for the `delete 1` Command
 image::DeleteSequenceDiagram.png[]
 
-NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
+NOTE: The lifeline for #DeleteCommandParser# should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
 
 [[Design-Model]]
 === Model component
@@ -118,17 +118,17 @@ NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X
 .Structure of the Model Component
 image::ModelClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/model/Model.java[`Model.java`]
+*API* : link:{repoURL}/src/main/java/seedu/address/model/Model.java[#Model.java#]
 
-The `Model`,
+The #Model#,
 
-* stores a `UserPref` object that represents the user's preferences.
-* stores the DishDatabase data and MealLog data.
-* exposes an unmodifiable `ObservableList<Meal>` and `ObservableList<Dish>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
+* stores a #UserPref# object that represents the user's preferences.
+* stores the #DishDatabase# data and #MealLog# data.
+* exposes an unmodifiable #ObservableList<Meal># and #ObservableList<Dish># that can be 'observed' e.g. the #UI# can be bound to this list so that it automatically updates when the data in the list change.
 * does not depend on any of the other three components.
 
 [NOTE]
-As a more OOP model, we can store a `Tag` list in `ModelManager`, which `Dish` can reference. This would allow `ModelManager` to only require one `Tag` object per unique `Tag`, instead of each `Dish` needing their own `Tag` object. An example of how such a model may look like is given below. +
+As a more OOP model, we can store a #Tag# list in #ModelManager#, which #Dish# can reference. This would allow #ModelManager# to only require one #Tag# object per unique #Tag#, instead of each #Dish# needing their own #Tag# object. An example of how such a model may look like is given below. +
  +
 image:BetterModelClassDiagram.png[]
 
@@ -138,17 +138,18 @@ image:BetterModelClassDiagram.png[]
 .Structure of the Storage Component
 image::StorageClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/seedu/address/storage/Storage.java[`Storage.java`]
+*API* : link:{repoURL}/src/main/java/seedu/address/storage/Storage.java[#Storage.java#]
 
-The `Storage` component,
+The #Storage# component,
 
-* can save `UserPref` objects in json format and read it back.
-* can save the DishDatabase data in json format and read it back.
+* can save #UserPref# objects in json format and read it back.
+* can save the #DishDatabase# data in json format and read it back.
+* can save the #MealLog# data in json format and read it back.
 
 [[Design-Commons]]
 === Common classes
 
-Classes used by multiple components are in the `seedu.calofit.commons` package.
+Classes used by multiple components are in the *seedu.calofit.commons* package.
 
 == Implementation
 
